# stirbot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
alembic/: env.py
alembic/versions/: 2024-07-13_initial.py  2024-08-18_places_and_booking.py  2024-08-22_place_additions.py  2024-08-22_user_notifications.py  2024-08-29_user_additional_info.py  2024-08-30_rules_object.py
app/: __main__.py  config.py  exceptions.py  loader.py  strings.py
app/actions/: __init__.py  base.py  get_previous_user.py
app/database/: __init__.py  loader.py
app/database/crud/: __init__.py  base.py  booking.py  place.py  rules.py  user.py
app/database/models/: __init__.py  base.py  booking.py  place.py  rules.py  user.py
app/dialogs/: __init__.py  admin.py  booking.py  edit_booking.py  new_booking.py  notifications.py  signup.py  user.py  user_actions.py  user_rules.py
app/filters/: __init__.py  auth.py
app/handlers/: __init__.py  unauthenticated.py
app/handlers/authenticated/: __init__.py  admin.py  booking.py  user.py  user_pending.py
app/keyboards/: booking.py  new_user.py
app/middleware/: __init__.py  database.py  scheduler.py  user_consistency.py
app/utils/: admin.py  booking.py  commands.py  datetime.py  errors.py  layout_widget.py  logging.py  notifications.py  prestart.py  scheduler.py  user.py
scripts/: admin.py  docker-entrypoint.sh  place.py  rules.py
